--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,29 +1,19 @@
+# see: https://github.com/marketplace/actions/test-compile-for-arduino
+
 name: build
-
 on: [push, pull_request]
-
 jobs:
-  build-matrix:
-
-    strategy:
-      matrix:
-        arduino-platform: ["arduino:avr"]
-        include:
-          - arduino-platform: "arduino:avr"
-            fqbn: "arduino:avr:unowifi"
-
+  build:
+    name: build for MCU
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Setup Arduino CLI
-        uses: arduino/setup-arduino-cli@v1
-
-      - name: Install platform
-        run: |
-          arduino-cli core update-index
-          arduino-cli core install ${{ matrix.arduino-platform }}
-      - name: Compile Sketch
-        run: arduino-cli compile --fqbn ${{ matrix.fqbn }} ./bbn_m5tough_active_boat
+    - name: Compile all examples
+      uses: ArminJo/arduino-test-compile@v3
+      with:
+        arduino-board-fqbn: esp32:esp32
+        platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
+        required-libraries: M5Tough,LVGL@8.3.6,ArduinoJson@6.21.2,ReactESP
