--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Compile all examples
+    - name: Compile sketch
       uses: ArminJo/arduino-test-compile@v3
       with:
         arduino-board-fqbn: esp32:esp32
