--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,4 +16,4 @@ jobs:
       with:
         arduino-board-fqbn: esp32:esp32
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-        required-libraries: M5Tough,LVGL@8.3.6,ArduinoJson@6.21.2,ReactESP
+        required-libraries: M5Tough,MQTT@2.5.1,LVGL@8.3.6,ArduinoJson@6.21.2,ReactESP
