--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,9 +11,23 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    - name: Checkout M5Tough library
+      uses: actions/checkout@v3
+      with:
+          repository: m5stack/M5Tough
+          ref: master
+          path: CustomLibrary_M5Tough # must contain string "Custom"
+
+    - name: Checkout ReactESP library
+      uses: actions/checkout@v3
+      with:
+          repository: mairas/ReactESP
+          ref: master
+          path: CustomLibrary_ReactESP # must also contain string "Custom"
+
     - name: Compile sketch
       uses: ArminJo/arduino-test-compile@v3
       with:
         arduino-board-fqbn: esp32:esp32
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-        required-libraries: M5Tough,MQTT@2.5.1,LVGL@8.3.6,ArduinoJson@6.21.2,ReactESP
+        required-libraries: MQTT@2.5.1,LVGL@8.3.6,ArduinoJson@6.21.2
