--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,11 +25,11 @@ jobs:
           ref: v2.1.0
           path: CustomLibrary_ReactESP # must also contain string "Custom"
 
-    - name: copy lv_conf.h
-      uses: canastro/copy-file-action@master
-      with:
-        source: "/github/workspace/lv_conf.h-custom"
-        target: "/home/runner/Arduino/libraries/lv_conf.h"                    
+    #- name: copy lv_conf.h
+    #  uses: canastro/copy-file-action@master
+    #  with:
+    #    source: "/github/workspace/lv_conf.h-custom"
+    #    target: "/home/runner/Arduino/libraries/lv_conf.h"                    
 
     - name: Compile sketch
       uses: ArminJo/arduino-test-compile@v3
