--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
           ref: v2.1.0
           path: CustomLibrary_ReactESP # must also contain string "Custom"
 
-    - name: copy lv_conf.h
+    - name: Copy lv_conf.h
       run: |
         mkdir -p /home/runner/Arduino/libraries
         cp /home/runner/work/bbn-m5stack-tough/bbn-m5stack-tough/lv_conf.h-custom /home/runner/Arduino/libraries/lv_conf.h
