--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,13 +18,6 @@ jobs:
           ref: master
           path: CustomLibrary_M5Tough # must contain string "Custom"
 
-    - name: Checkout ReactESP library
-      uses: actions/checkout@v3
-      with:
-          repository: mairas/ReactESP
-          ref: v2.1.0
-          path: CustomLibrary_ReactESP # must also contain string "Custom"
-
     - name: Copy lv_conf.h
       run: |
         mkdir -p /home/runner/Arduino/libraries
@@ -35,7 +28,7 @@ jobs:
       with:
         arduino-board-fqbn: esp32:esp32:m5stack-core2
         platform-url: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-        required-libraries: MQTT@2.5.1,LVGL@8.3.6,ArduinoJson@6.21.2
+        required-libraries: MQTT@2.5.1,LVGL@8.3.6,ArduinoJson@6.21.2,ReactESP@2.1.0
         sketch-names: "*.ino"
         sketch-names-find-start: bbn_m5tough_active_boat/*
         extra-arduino-cli-args: "--warnings default"
