--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,4 +36,6 @@ jobs:
 
     - name: Make zip
       run: |
-        ls /home/runner/work/bbn-m5stack-tough/bbn-m5stack-tough/bbn_m5tough_active_boat/build/*.bin | zip bbn_m5tough_active_boat_bin-$(date +%Y-%m-%d).zip -@
+        ls /home/runner/work/bbn-m5stack-tough/bbn-m5stack-tough/bbn_m5tough_active_boat/build/*.bin | zip bbn_m5tough_active_boat_bin-$(date +%Y-%m-%d).zip -j -@
+        pwd
+        ls *.zip        
