--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout M5Tough library
       uses: actions/checkout@v3
       with:
-          repository: m5stack/M5Tough
+          repository: mgrouch/M5Tough
           ref: master
           path: CustomLibrary_M5Tough # must contain string "Custom"
 
