--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,4 +36,14 @@ jobs:
       run: |
         ls /home/runner/work/bbn-m5stack-tough/bbn-m5stack-tough/bbn_m5tough_active_boat/build/*.bin | zip bbn_m5tough_active_boat_bin-$(date +%Y-%m-%d).zip -j -@
         pwd
-        ls *.zip        
+        ls *.zip
+
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: bbn_m5tough_active_boat_bin*.zip
+        tag: ${{ github.ref }}
+        overwrite: true
+        file_glob: true
+    
