--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Merge BINs
       run: >
         pwd;
-        $HOME/.arduino15/packages/esp32/tools/esptool_py/4.5.1/esptool.py 
+        python3 "$HOME/.arduino15/packages/esp32/tools/esptool_py/4.5.1/esptool.py" 
         --chip esp32 merge_bin -o /home/runner/work/bbn-m5stack-tough/bbn-m5stack-tough/bbn_m5tough_active_boat/build/bbn_m5tough_active_boat_firmware.bin 
         --flash_mode dio --flash_size 16MB 
         0x1000 "$HOME/work/bbn-m5stack-tough/bbn-m5stack-tough/bbn_m5tough_active_boat/build/bbn_m5tough_active_boat.ino.bootloader.bin" 
